# Reference-Architectures-website

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
assets/uml_models/nap_architecture/: index.htm
assets/uml_models/nap_architecture/EARoot/: EA1.htm  EA10.htm  EA17.htm  EA18.htm  EA19.htm  EA20.htm  EA21.htm  EA23.htm  EA25.htm  EA3.htm  EA4.htm  EA7.htm  EA8.htm
assets/uml_models/nap_architecture/linkdocs/: EAID_2B49F77B_92D8_4494_B75B_7482740303ED.htm  EAID_373128AD_1078_42bc_A0B2_F5E56522B7B8.htm  EAID_572A0DDD_F3CD_426f_B920_5E8E986DFC0C.htm  EAID_60272230_DC45_429a_899D_30434C7D34FC.htm  EAID_899D3043_4C7D_34FC_BF25_42B740C0C05A.htm  EAID_9050A100_582E_4602_8B8D_8976E2A4A123.htm  EAID_9D010BE5_6592_4e26_86F6_6D16140A0A39.htm  EAID_B5381D32_D813_436f_8E09_B87BD10B5F64.htm  EAID_EBF272EF_DE4F_4939_83C4_C3924574983A.htm  EAID_ECF5445C_50A8_4ca3_8C86_50DB480DBD8C.htm
assets/uml_models/nb_architecture/: index.htm
assets/uml_models/nb_architecture/EARoot/: EA10.htm  EA11.htm  EA12.htm  EA14.htm  EA16.htm  EA3.htm  EA4.htm  EA6.htm  EA9.htm
assets/uml_models/nb_architecture/linkdocs/: EAID_3C58CE28_9384_47b8_AC17_414A0B505D90.htm
docs/: ref_archs.md
docs/assets/uml_models/nap_architecture/: index.htm
docs/uml/: nap_architecture.md  nb_architecture.md
frame/: index.html
ref_archs/: index.html
search/: search_index.json
uml/frame_metamodel/: index.html
uml/frame_repository/: index.html
uml/nap_architecture/: index.html
uml/nb_architecture/: index.html
(+2501 files in other folders)
